plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'io.gatling.gradle' version '3.13.5.2'
}

group = 'com.goggles'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

gatling {
	jvmArgs = [
			'--add-opens=java.base/java.lang=ALL-UNNAMED',
			'--add-opens=java.base/java.util=ALL-UNNAMED',
			'-Xmx1g',
			'-Dfile.encoding=UTF-8'
	]
}

repositories {
	mavenCentral()
	maven {
		url = uri("https://maven.pkg.github.com/9oogle/common-library")
		credentials {
			username = providers.gradleProperty("GitHubPackagesUsername").get()
			password = providers.gradleProperty("GitHubPackagesPassword").get()
		}
	}
}

sourceSets {
	gatling {
		java.srcDirs = ["src/gatling/java"]
		resources.srcDirs = ["src/gatling/resources"]
	}
}

ext {
	set('springCloudVersion', "2025.0.2")
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ["-parameters"]
	dependsOn 'spotlessJava'
}

dependencies {
	// common-library
	implementation("com.goggles:common-library:1.0.6")

	// spring boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// spring boot cloud
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	implementation 'org.springframework.cloud:spring-cloud-starter-config'

	// kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// zipkin
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// aws ses
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'software.amazon.awssdk:sesv2:2.43.2'

	// db
	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.mockito:mockito-core'
	testRuntimeOnly  'net.bytebuddy:byte-buddy-agent'
	testImplementation 'p6spy:p6spy:3.9.1'
	implementation 'org.mockito:mockito-core'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

spotless {
	java {
		googleJavaFormat('1.19.2')
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
